# logavo

./: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: Cargo.toml  logavo.example.toml
agent/src/: config.rs  main.rs  parse.rs  proxy.rs  ship.rs  tail.rs
docs/: spec.md
server/: .gitignore  README.md  mix.exs
server/assets/: tailwind.config.js
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
server/lib/: logavo.ex  logavo_web.ex
server/lib/logavo/: application.ex  logs.ex  mailer.ex  repo.ex
server/lib/logavo/logs/: log_entry.ex  proxy_request.ex  retention.ex
server/lib/logavo_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
server/lib/logavo_web/components/: core_components.ex  layouts.ex
server/lib/logavo_web/components/layouts/: root.html.heex
server/lib/logavo_web/controllers/: error_html.ex  error_json.ex  ingest_controller.ex  logs_controller.ex  page_controller.ex  page_html.ex  proxy_ingest_controller.ex
server/lib/logavo_web/controllers/page_html/: home.html.heex
server/lib/logavo_web/live/: dashboard_live.ex
server/priv/gettext/: errors.pot
server/priv/repo/: seeds.exs
server/priv/repo/migrations/: 20260724000001_create_log_entries.exs  20260724000002_create_proxy_requests.exs
server/priv/static/assets/: app.css  dashboard.css
server/test/: test_helper.exs
server/test/logavo_web/controllers/: error_html_test.exs  error_json_test.exs  ingest_controller_test.exs  logs_controller_test.exs  page_controller_test.exs
server/test/logavo_web/live/: dashboard_live_test.exs
server/test/support/: conn_case.ex  data_case.ex
