# ASSUMPTION: This subtask's acceptance criteria state "no new deps", and
# `cargo check` runs without network access, so no crates are added — not even
# serde/toml. The Phase 1 TOML config loader is implemented with std only
# (see src/config.rs). Core deps (tokio/axum/serde/regex) are introduced in
# later subtasks (agent-tail/parse/ship/proxy) where they are actually needed.
# ASSUMPTION: spec pins no Rust edition; edition 2021 is used for broad
# toolchain compatibility.
[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
