# Phase 1 agent crate.
#
# ASSUMPTION: The TOML config loader (agent-config subtask) is implemented with
# std only (see src/config.rs); that subtask needed no crates and its acceptance
# criteria stated "no new deps".
#
# agent-tail (追記行の非同期 tail) uses tokio. tokio は docs/spec.md 5.1 と親 epic
# が明示的に中核依存 (tokio/axum/serde/regex) として追加を許可・推奨しており、
# 依存最小主義の対象は中核依存“以外”である。spec の中核要件『tokio でファイルの
# 追記行を非同期に検知する』を満たすため、std::thread ベースの擬似 tail から
# tokio 非同期ランタイムへ置き換えた (see src/tail.rs)。有効化する feature は
# 非同期 tail・並行 tail・正常停止に必要な最小限に絞る。
#
# agent-ship (バッチ送信・バッファ再送) は正規化済みログを最大100件 or 1秒で
# バッチ化し server の POST /api/ingest へ送る (see src/ship.rs)。送信先は
# docs/spec.md 5. のとおり localhost のみのため、HTTP クライアントは reqwest 等を
# 新規依存として足さず、tokio の TcpStream 上に HTTP/1.1 POST を自作した
# (依存最小主義: 学習題材/攻撃面・更新負担の抑制)。これに伴い tokio へ "net"
# feature のみ追加 (新規 crate ではなく既存中核依存の feature 追加)。
#
# agent-proxy (Phase 4 HTTP リバースプロキシ) は :9000 → :3000 のように待受→転送し、
# 各リクエストの method/path/status/latency_ms/req/res サイズを spec 2.2 形式で
# 記録して agent-ship 経由で server の POST /api/proxy へ送る (see src/proxy.rs)。
# spec 1.2 は axum/hyper を中核依存として許可しているが、既存 ship.rs が tokio の
# TcpStream 上に HTTP を自作している方針に揃え、プロキシも新規 crate を足さず
# tokio net (既存 feature "net"/"io-util"/"sync") だけで自作する (依存最小主義:
# 攻撃面・更新負担の抑制、学習題材)。新規依存・新規 feature の追加は無い。
#
# ASSUMPTION: spec pins no Rust edition; edition 2021 is used for broad
# toolchain compatibility.
[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync", "signal", "net"] }
